--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body class="landing">
     <!--Scripts-->
-
+    <h1>test</h1>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
 
