--- a/index.html
+++ b/index.html
@@ -3,16 +3,66 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="ML-motion" />
+        <meta name="keywords" content="video, photo, art" />
 
-        <title>Document</title>
+        <title>ML-motion</title>
 
             <!--Styles-->
         <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon">
         <link href="css/partials/bootstrap.min.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet">
     </head>
-    <body class="landing">
+    <body>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="main-screen d-md-none">
+                    <div class="container-fluid">
+                        <!--Mobile header-->
+                        <header class="ml-header">
+                            <!--logo block-->
+                            <div class="ml-logo">
+                                <a href="#home"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
+                            </div>
+                            <!--end logo block-->
+
+                            <!--navbar block-->
+                            <nav class="navbar ml-navbar">
+                                <button type="button" class="navbar-toggler m-toggle" data-toggle="collapse" data-target="#nav-toggle" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                                    <div class="nav-icon1">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </button>
+                            </nav>
+
+                            <div class="collapse navbar-collapse" id="nav-toggle">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="#">MAIN<span class="sr-only">(current)</span></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">VIDEOS</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">PHOTOS</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">CONTACTS</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!--end navbar block-->
+                        </header>
+                        <!--End mobile header-->
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <!--Scripts-->
-    <h1>test</h1>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
 
