--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div class="main-screen d-md-none">
+                <div class="d-md-none main-screen">
                     <div class="container-fluid">
                         <!--Mobile header-->
                         <header class="ml-header">
                             <!--logo block-->
                             <div class="ml-logo">
-                                <a href="#home"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
+                                <a href="#home" class="logo-link"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
                             </div>
                             <!--end logo block-->
 
