--- a/index.html
+++ b/index.html
@@ -16,48 +16,48 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div class="d-md-none main-screen">
-                    <div class="container-fluid">
-                        <!--Mobile header-->
-                        <header class="ml-header">
-                            <!--logo block-->
-                            <div class="ml-logo">
-                                <a href="#home" class="logo-link"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
-                            </div>
-                            <!--end logo block-->
 
-                            <!--navbar block-->
-                            <nav class="navbar ml-navbar">
-                                <button type="button" class="navbar-toggler m-toggle" data-toggle="collapse" data-target="#nav-toggle" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                                    <div class="nav-icon1">
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                    </div>
-                                </button>
-                            </nav>
+                <!--main page screen-->
+                <div class="main-screen"></div>
 
-                            <div class="collapse navbar-collapse" id="nav-toggle">
-                                <ul class="navbar-nav">
-                                    <li class="nav-item active">
-                                        <a class="nav-link" href="#">MAIN<span class="sr-only">(current)</span></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">VIDEOS</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">PHOTOS</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">CONTACTS</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!--end navbar block-->
-                        </header>
-                        <!--End mobile header-->
+                    <!--Mobile header-->
+                <header class="ml-header d-md-none">
+                    <!--logo block-->
+                    <div class="ml-logo">
+                        <a href="#home" class="logo-link"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
                     </div>
-                </div>
+                    <!--end logo block-->
+
+                    <!--navbar block-->
+                    <nav class="navbar ml-navbar">
+                        <button type="button" class="navbar-toggler m-toggle" data-toggle="collapse" data-target="#nav-toggle" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                            <div class="nav-icon1">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </button>
+                    </nav>
+
+                    <div class="collapse navbar-collapse" id="nav-toggle">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">MAIN</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">VIDEOS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">PHOTOS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">CONTACTS</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--end navbar block-->
+                </header>
+                <!--End mobile header-->
             </div>
         </div>
 
