--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container-fluid d-md-none">
             <div class="row">
-
                 <!--main page screen-->
                 <div class="main-screen"></div>
-
                     <!--Mobile header-->
-                <header class="ml-header d-md-none">
+                <header class="ml-header">
+
                     <!--logo block-->
                     <div class="ml-logo">
                         <a href="#home" class="logo-link"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
