--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">CONTACTS</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="nav-link" href="#"><i class="fab fa-vimeo-v"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <!--end navbar block-->
@@ -63,6 +68,7 @@
     <!--Scripts-->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/fontawesome-all.js"></script>
     <script src="js/main.js"></script>
 
     </body>
