--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
             <!--main page block-->
-         <div class="main-screen d-md-none">
+         <section class="main-screen d-md-none">
             <!--Mobile header-->
             <header class="ml-header">
                 <!--logo block-->
@@ -56,12 +56,12 @@
             </header>
             <!--End mobile header-->
              <a class="arrow-down" href=""><img src="../img/mob/arrow-down.png" alt=""></a>
-        </div>
+        </section>
             <!--end main page block-->
 
             <!--Video Block-->
-         <div id="videoCarousel" class="carousel slide video-screen" data-ride="carousel" data-interval="false">
-             <a class="video-btn" href="#">VIDEOS</a>
+         <section id="videoCarousel" class="carousel slide video-screen" data-ride="carousel" data-interval="false">
+             <a class="slider-btn video-btn" href="#">VIDEOS</a>
              <a class="arrow-down" href=""><img src="../img/mob/arrow-down.png" alt=""></a>
              <ol class="carousel-indicators">
                  <li data-target="#videoCarousel" data-slide-to="0" class="active"></li>
@@ -83,8 +83,57 @@
                      <img class="carousel-img" src="../img/mob/video-screen4.png" alt="">
                  </div>
              </div>
-         </div>
+         </section>
             <!--End Video Block-->
+
+         <!--Photo Block-->
+         <section id="photoCarousel" class="carousel slide video-screen" data-ride="carousel" data-interval="false">
+            <a class="slider-btn photo-btn" href="#">PHOTOS</a>
+            <a class="arrow-down" href=""><img src="../img/mob/arrow-down.png" alt=""></a>
+            <ol class="carousel-indicators">
+                <li data-target="#photoCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#photoCarousel" data-slide-to="1"></li>
+                <li data-target="#photoCarousel" data-slide-to="2"></li>
+                <li data-target="#photoCarousel" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="carousel-img" src="../img/mob/photo-screen1.png" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-img" src="../img/mob/photo-screen2.png" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-img" src="../img/mob/photo-screen3.png" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-img" src="../img/mob/photo-screen4.png" alt="">
+                </div>
+            </div>
+        </section>
+         <!--End Photo Block-->
+
+
+            <!--Contact Block-->
+         <section class="contact-screen">
+             <div class="contact-description">
+                 <div>Music videos, commercials, short films, promotional videos.<br> Let’s create together!</div>
+                 <h1 class="contact-h1">Follow us:</h1>
+                 <span class="contact-text">@ml_motion <br> www.facebook.com/ml.motion <br>www.vimeo.com/ml-motion</span>
+                 <h1 class="contact-h1">Or contact directly:</h1>
+                 <span class="contact-text">+380 (93) 756 64 25 (Viber, Telegram) <br> hello@ml-motion.com</span>
+             </div>
+
+             <footer>
+                 <a class="footer-link" href="#"><i class="fab fa-instagram"></i></a>
+                 <a class="footer-link" href="#"><i class="fab fa-facebook-f"></i></a>
+                 <a class="footer-link" href="#"><i class="fab fa-vimeo-v"></i></a>
+                 <div class="footer-mail">hello@ml-motion.com</div>
+             </footer>
+         </section>
+
+
+            <!--End Contact Block-->
 
         <!--Scripts-->
         <script src="js/jquery-3.3.1.min.js"></script>
