--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!--end main page block-->
 
             <!--Video Block-->
-         <section id="videoCarousel" class="carousel slide video-screen" data-ride="carousel" data-interval="false">
+         <section id="videoCarousel" class="carousel slide d-md-none video-screen" data-ride="carousel" data-interval="false">
              <a class="slider-btn video-btn" href="#">VIDEOS</a>
              <a class="arrow-down" href=""><img src="../img/mob/arrow-down.png" alt=""></a>
              <ol class="carousel-indicators">
@@ -71,23 +71,23 @@
              </ol>
              <div class="carousel-inner">
                  <div class="carousel-item active">
-                     <img class="carousel-img" src="../img/mob/video-screen1.png" alt="">
+                     <img class="carousel-img" src="img/mob/video-screen1.png" alt="">
                  </div>
                  <div class="carousel-item">
-                     <img class="carousel-img" src="../img/mob/video-screen2.png" alt="">
+                     <img class="carousel-img" src="img/mob/video-screen2.png" alt="">
                  </div>
                  <div class="carousel-item">
-                     <img class="carousel-img" src="../img/mob/video-screen3.png" alt="">
+                     <img class="carousel-img" src="img/mob/video-screen3.png" alt="">
                  </div>
                  <div class="carousel-item">
-                     <img class="carousel-img" src="../img/mob/video-screen4.png" alt="">
+                     <img class="carousel-img" src="img/mob/video-screen4.png" alt="">
                  </div>
              </div>
          </section>
             <!--End Video Block-->
 
          <!--Photo Block-->
-         <section id="photoCarousel" class="carousel slide video-screen" data-ride="carousel" data-interval="false">
+         <section id="photoCarousel" class="carousel slide d-md-none video-screen" data-ride="carousel" data-interval="false">
             <a class="slider-btn photo-btn" href="#">PHOTOS</a>
             <a class="arrow-down" href=""><img src="../img/mob/arrow-down.png" alt=""></a>
             <ol class="carousel-indicators">
@@ -98,16 +98,16 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="carousel-img" src="../img/mob/photo-screen1.png" alt="">
+                    <img class="carousel-img" src="img/mob/photo-screen1.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-img" src="../img/mob/photo-screen2.png" alt="">
+                    <img class="carousel-img" src="img/mob/photo-screen2.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-img" src="../img/mob/photo-screen3.png" alt="">
+                    <img class="carousel-img" src="img/mob/photo-screen3.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-img" src="../img/mob/photo-screen4.png" alt="">
+                    <img class="carousel-img" src="img/mob/photo-screen4.png" alt="">
                 </div>
             </div>
         </section>
@@ -115,7 +115,7 @@
 
 
             <!--Contact Block-->
-         <section class="contact-screen">
+         <section class="d-md-none contact-screen">
              <div class="contact-description">
                  <div>Music videos, commercials, short films, promotional videos.<br> Let’s create together!</div>
                  <h1 class="contact-h1">Follow us:</h1>
