--- a/index.html
+++ b/index.html
@@ -2,146 +2,147 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name=”format-detection” content=”telephone=no”>
         <meta name="description" content="ML-motion" />
         <meta name="keywords" content="video, photo, art" />
-
         <title>ML-motion</title>
-
             <!--Styles-->
         <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon">
         <link href="css/partials/bootstrap.min.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
-            <!--main page block-->
-         <section class="main-screen d-md-none">
-            <!--Mobile header-->
-            <header class="ml-header">
-                <!--logo block-->
-                <div class="ml-logo">
-                    <a href="#home" class="logo-link"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
-                </div>
-                <!--end logo block-->
-                <!--navbar block-->
-                <nav class="navbar ml-navbar">
-                    <div class="nav-icon1 navbar-toggler m-toggle" data-toggle="collapse" data-target="#nav-toggle" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+        <div class="main">
+                <!--main page block-->
+             <section class="visible-xs main-screen">
+                <!--Mobile header-->
+                <header class="ml-header">
+                    <!--logo block-->
+                    <div class="ml-logo">
+                        <a href="#home" class="logo-link"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
                     </div>
-                </nav>
-                <div class="collapse navbar-collapse" id="nav-toggle">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">MAIN</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">VIDEOS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">PHOTOS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACTS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
-                            <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="nav-link" href="#"><i class="fab fa-vimeo-v"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <!--end navbar block-->
-            </header>
-            <!--End mobile header-->
-             <a class="arrow-down" href=""><img src="../img/mob/arrow-down.png" alt=""></a>
-        </section>
-            <!--end main page block-->
+                    <!--end logo block-->
+                    <!--navbar block-->
+                    <nav class="navbar ml-navbar">
+                        <div class="nav-icon1 navbar-toggler m-toggle" data-toggle="collapse" data-target="#nav-toggle" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </nav>
+                    <div class="collapse navbar-collapse" id="nav-toggle">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">MAIN</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">VIDEOS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">PHOTOS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">CONTACTS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="nav-link" href="#"><i class="fab fa-vimeo-v"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--end navbar block-->
+                </header>
+                <!--End mobile header-->
+                 <div id="home-arrow" class="arrow-down"><img src="img/mob/arrow-down.png" alt=""></div>
+            </section>
+                <!--end main page block-->
 
-            <!--Video Block-->
-         <section id="videoCarousel" class="carousel slide d-md-none video-screen" data-ride="carousel" data-interval="false">
-             <a class="slider-btn video-btn" href="#">VIDEOS</a>
-             <a class="arrow-down" href=""><img src="../img/mob/arrow-down.png" alt=""></a>
-             <ol class="carousel-indicators">
-                 <li data-target="#videoCarousel" data-slide-to="0" class="active"></li>
-                 <li data-target="#videoCarousel" data-slide-to="1"></li>
-                 <li data-target="#videoCarousel" data-slide-to="2"></li>
-                 <li data-target="#videoCarousel" data-slide-to="3"></li>
-             </ol>
-             <div class="carousel-inner">
-                 <div class="carousel-item active">
-                     <img class="carousel-img" src="img/mob/video-screen1.png" alt="">
+                <!--Video Block-->
+             <section id="videoCarousel" class="one visible-xs carousel slide video-screen" data-ride="carousel" data-interval="false">
+                 <a class="slider-btn video-btn" href="#">VIDEOS</a>
+                 <div id="video-arrow" class="arrow-down"><img src="../img/mob/arrow-down.png" alt=""></div>
+                 <ol class="carousel-indicators">
+                     <li data-target="#videoCarousel" data-slide-to="0" class="active"></li>
+                     <li data-target="#videoCarousel" data-slide-to="1"></li>
+                     <li data-target="#videoCarousel" data-slide-to="2"></li>
+                     <li data-target="#videoCarousel" data-slide-to="3"></li>
+                 </ol>
+                 <div class="carousel-inner" role="listbox">
+                     <div class="item active">
+                         <img class="carousel-img" src="img/mob/video-screen1.png" alt="">
+                     </div>
+                     <div class="item">
+                         <img class="carousel-img" src="img/mob/video-screen2.png" alt="">
+                     </div>
+                     <div class="item">
+                         <img class="carousel-img" src="img/mob/video-screen3.png" alt="">
+                     </div>
+                     <div class="item">
+                         <img class="carousel-img" src="img/mob/video-screen4.png" alt="">
+                     </div>
                  </div>
-                 <div class="carousel-item">
-                     <img class="carousel-img" src="img/mob/video-screen2.png" alt="">
+             </section>
+                <!--End Video Block-->
+
+             <!--Photo Block-->
+             <section id="photoCarousel" class="two visible-xs carousel slide photo-screen" data-ride="carousel" data-interval="false">
+                <a class="slider-btn photo-btn" href="#">PHOTOS</a>
+                <div id="photo-arrow" class="arrow-down"><img src="img/mob/arrow-down.png" alt=""></div>
+                <ol class="carousel-indicators">
+                    <li data-target="#photoCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#photoCarousel" data-slide-to="1"></li>
+                    <li data-target="#photoCarousel" data-slide-to="2"></li>
+                    <li data-target="#photoCarousel" data-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img class="carousel-img" src="img/mob/photo-screen1.png" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="carousel-img" src="img/mob/photo-screen2.png" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="carousel-img" src="img/mob/photo-screen3.png" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="carousel-img" src="img/mob/photo-screen4.png" alt="">
+                    </div>
+                </div>
+            </section>
+             <!--End Photo Block-->
+
+
+                <!--Contact Block-->
+             <section class="three visible-xs contact-screen">
+                 <div class="contact-description">
+                     <div>Music videos, commercials, short films, promotional videos.<br> Let’s create together!</div>
+                     <h1 class="contact-h1">Follow us:</h1>
+                     <span class="contact-text">@ml_motion <br> www.facebook.com/ml.motion <br>www.vimeo.com/ml-motion</span>
+                     <h1 class="contact-h1">Or contact directly:</h1>
+                     <span class="contact-text">+380 (93) 756 64 25 (Viber, Telegram) <br> hello@ml-motion.com</span>
                  </div>
-                 <div class="carousel-item">
-                     <img class="carousel-img" src="img/mob/video-screen3.png" alt="">
-                 </div>
-                 <div class="carousel-item">
-                     <img class="carousel-img" src="img/mob/video-screen4.png" alt="">
-                 </div>
-             </div>
-         </section>
-            <!--End Video Block-->
 
-         <!--Photo Block-->
-         <section id="photoCarousel" class="carousel slide d-md-none video-screen" data-ride="carousel" data-interval="false">
-            <a class="slider-btn photo-btn" href="#">PHOTOS</a>
-            <a class="arrow-down" href=""><img src="../img/mob/arrow-down.png" alt=""></a>
-            <ol class="carousel-indicators">
-                <li data-target="#photoCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#photoCarousel" data-slide-to="1"></li>
-                <li data-target="#photoCarousel" data-slide-to="2"></li>
-                <li data-target="#photoCarousel" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="carousel-img" src="img/mob/photo-screen1.png" alt="">
-                </div>
-                <div class="carousel-item">
-                    <img class="carousel-img" src="img/mob/photo-screen2.png" alt="">
-                </div>
-                <div class="carousel-item">
-                    <img class="carousel-img" src="img/mob/photo-screen3.png" alt="">
-                </div>
-                <div class="carousel-item">
-                    <img class="carousel-img" src="img/mob/photo-screen4.png" alt="">
-                </div>
-            </div>
-        </section>
-         <!--End Photo Block-->
+                 <footer>
+                     <a class="footer-link" href="#"><i class="fab fa-instagram"></i></a>
+                     <a class="footer-link" href="#"><i class="fab fa-facebook-f"></i></a>
+                     <a class="footer-link" href="#"><i class="fab fa-vimeo-v"></i></a>
+                     <div class="footer-mail">hello@ml-motion.com</div>
+                 </footer>
+             </section>
 
 
-            <!--Contact Block-->
-         <section class="d-md-none contact-screen">
-             <div class="contact-description">
-                 <div>Music videos, commercials, short films, promotional videos.<br> Let’s create together!</div>
-                 <h1 class="contact-h1">Follow us:</h1>
-                 <span class="contact-text">@ml_motion <br> www.facebook.com/ml.motion <br>www.vimeo.com/ml-motion</span>
-                 <h1 class="contact-h1">Or contact directly:</h1>
-                 <span class="contact-text">+380 (93) 756 64 25 (Viber, Telegram) <br> hello@ml-motion.com</span>
-             </div>
+                <!--End Contact Block-->
 
-             <footer>
-                 <a class="footer-link" href="#"><i class="fab fa-instagram"></i></a>
-                 <a class="footer-link" href="#"><i class="fab fa-facebook-f"></i></a>
-                 <a class="footer-link" href="#"><i class="fab fa-vimeo-v"></i></a>
-                 <div class="footer-mail">hello@ml-motion.com</div>
-             </footer>
-         </section>
+            <!--Scripts-->
+            <script src="js/jquery-3.3.1.min.js"></script>
+            <script src="js/fontawesome-all.js"></script>
+            <script src="js/bootstrap.min.js"></script>
 
-
-            <!--End Contact Block-->
-
-        <!--Scripts-->
-        <script src="js/jquery-3.3.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/fontawesome-all.js"></script>
-        <script src="js/slick.min.js"></script>
-        <script src="js/main.js"></script>
-
+            <script src="js/main.js"></script>
+        </div>
     </body>
 
 </html>
