--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
-        <div class="main">
+
                 <!--main page block-->
              <section class="visible-xs main-screen">
                 <!--Mobile header-->
@@ -63,7 +63,7 @@
                 <!--Video Block-->
              <section id="videoCarousel" class="one visible-xs carousel slide video-screen" data-ride="carousel" data-interval="false">
                  <a class="slider-btn video-btn" href="#">VIDEOS</a>
-                 <div id="video-arrow" class="arrow-down"><img src="../img/mob/arrow-down.png" alt=""></div>
+                 <div id="video-arrow" class="arrow-down"><img src="img/mob/arrow-down.png" alt=""></div>
                  <ol class="carousel-indicators">
                      <li data-target="#videoCarousel" data-slide-to="0" class="active"></li>
                      <li data-target="#videoCarousel" data-slide-to="1"></li>
@@ -133,16 +133,13 @@
                  </footer>
              </section>
 
-
                 <!--End Contact Block-->
 
             <!--Scripts-->
             <script src="js/jquery-3.3.1.min.js"></script>
             <script src="js/fontawesome-all.js"></script>
             <script src="js/bootstrap.min.js"></script>
-
             <script src="js/main.js"></script>
-        </div>
     </body>
 
 </html>
