fix scroll full page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
-
                 <!--main page block-->
              <section class="visible-xs main-screen">
                 <!--Mobile header-->
@@ -61,7 +60,7 @@
                 <!--end main page block-->
 
                 <!--Video Block-->
-             <section id="videoCarousel" class="one visible-xs carousel slide video-screen" data-ride="carousel" data-interval="false">
+             <section id="videoCarousel" class="visible-xs carousel slide video-screen" data-ride="carousel" data-interval="false">
                  <a class="slider-btn video-btn" href="#">VIDEOS</a>
                  <div id="video-arrow" class="arrow-down"><img src="img/mob/arrow-down.png" alt=""></div>
                  <ol class="carousel-indicators">
@@ -88,7 +87,7 @@
                 <!--End Video Block-->
 
              <!--Photo Block-->
-             <section id="photoCarousel" class="two visible-xs carousel slide photo-screen" data-ride="carousel" data-interval="false">
+             <section id="photoCarousel" class="visible-xs carousel slide photo-screen" data-ride="carousel" data-interval="false">
                 <a class="slider-btn photo-btn" href="#">PHOTOS</a>
                 <div id="photo-arrow" class="arrow-down"><img src="img/mob/arrow-down.png" alt=""></div>
                 <ol class="carousel-indicators">
@@ -116,7 +115,7 @@
 
 
                 <!--Contact Block-->
-             <section class="three visible-xs contact-screen">
+             <section class="visible-xs contact-screen">
                  <div class="contact-description">
                      <div>Music videos, commercials, short films, promotional videos.<br> Let’s create together!</div>
                      <h1 class="contact-h1">Follow us:</h1>
@@ -137,9 +136,11 @@
 
             <!--Scripts-->
             <script src="js/jquery-3.3.1.min.js"></script>
+            <script src="js/jquery.easings.min.js"></script>
             <script src="js/fontawesome-all.js"></script>
             <script src="js/bootstrap.min.js"></script>
             <script src="js/main.js"></script>
+
     </body>
 
 </html>
