Done Vertical mobile land

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                                 <a class="nav-link" href="#">CONTACTS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
-                                <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="nav-link" href="#"><i class="fab fa-vimeo-v"></i></a>
+                                <a class="nav-link" href="https://www.instagram.com/ml_motion"><i class="fab fa-instagram"></i></a>
+                                <a class="nav-link" href="https://www.facebook.com/ml.motion"><i class="fab fa-facebook-f"></i></a>
+                                <a class="nav-link" href="https://vimeo.com/user44312551"><i class="fab fa-vimeo-v"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -83,6 +83,8 @@
                          <img class="carousel-img" src="img/mob/video-screen4.png" alt="">
                      </div>
                  </div>
+                 <a class="left carousel-control" href="#videoCarousel" role="button" data-slide="prev"></a>
+                 <a class="right carousel-control" href="#videoCarousel" role="button" data-slide="next"></a>
              </section>
                 <!--End Video Block-->
 
@@ -110,6 +112,8 @@
                         <img class="carousel-img" src="img/mob/photo-screen4.png" alt="">
                     </div>
                 </div>
+                 <a class="left carousel-control" href="#photoCarousel" role="button" data-slide="prev"></a>
+                 <a class="right carousel-control" href="#photoCarousel" role="button" data-slide="next"></a>
             </section>
              <!--End Photo Block-->
 
@@ -125,9 +129,9 @@
                  </div>
 
                  <footer>
-                     <a class="footer-link" href="#"><i class="fab fa-instagram"></i></a>
-                     <a class="footer-link" href="#"><i class="fab fa-facebook-f"></i></a>
-                     <a class="footer-link" href="#"><i class="fab fa-vimeo-v"></i></a>
+                     <a class="footer-link" href="https://www.instagram.com/ml_motion"><i class="fab fa-instagram"></i></a>
+                     <a class="footer-link" href="https://www.facebook.com/ml.motion"><i class="fab fa-facebook-f"></i></a>
+                     <a class="footer-link" href="https://vimeo.com/user44312551"><i class="fab fa-vimeo-v"></i></a>
                      <div class="footer-mail">hello@ml-motion.com</div>
                  </footer>
              </section>
@@ -137,6 +141,7 @@
             <!--Scripts-->
             <script src="js/jquery-3.3.1.min.js"></script>
             <script src="js/jquery.easings.min.js"></script>
+            <script src="js/jquery.scrollify.js"></script>
             <script src="js/fontawesome-all.js"></script>
             <script src="js/bootstrap.min.js"></script>
             <script src="js/main.js"></script>
