video, photo, contact pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <header class="ml-header">
                     <!--logo block-->
                     <div class="ml-logo">
-                        <a href="#home" class="logo-link"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
+                        <a href="index.html" class="logo-link"><img class="logo-mob" src="img/mob/logo-mob.png" alt="logo"></a>
                     </div>
                     <!--end logo block-->
                     <!--navbar block-->
@@ -34,16 +34,16 @@
                     <div class="collapse navbar-collapse" id="nav-toggle">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">MAIN</a>
+                                <a class="nav-link" href="/index.html">MAIN</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">VIDEOS</a>
+                                <a class="nav-link" href="video.html">VIDEOS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">PHOTOS</a>
+                                <a class="nav-link" href="photo.html">PHOTOS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">CONTACTS</a>
+                                <a class="nav-link" href="contact.html">CONTACTS</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="https://www.instagram.com/ml_motion"><i class="fab fa-instagram"></i></a>
@@ -61,7 +61,7 @@
 
                 <!--Video Block-->
              <section id="videoCarousel" class="visible-xs carousel slide video-screen" data-ride="carousel" data-interval="false">
-                 <a class="slider-btn video-btn" href="#">VIDEOS</a>
+                 <a class="slider-btn video-btn" href="video.html">VIDEOS</a>
                  <div id="video-arrow" class="arrow-down"><img src="img/mob/arrow-down.png" alt=""></div>
                  <ol class="carousel-indicators">
                      <li data-target="#videoCarousel" data-slide-to="0" class="active"></li>
@@ -90,7 +90,7 @@
 
              <!--Photo Block-->
              <section id="photoCarousel" class="visible-xs carousel slide photo-screen" data-ride="carousel" data-interval="false">
-                <a class="slider-btn photo-btn" href="#">PHOTOS</a>
+                <a class="slider-btn photo-btn" href="photo.html">PHOTOS</a>
                 <div id="photo-arrow" class="arrow-down"><img src="img/mob/arrow-down.png" alt=""></div>
                 <ol class="carousel-indicators">
                     <li data-target="#photoCarousel" data-slide-to="0" class="active"></li>
@@ -127,14 +127,14 @@
                      <h1 class="contact-h1">Or contact directly:</h1>
                      <span class="contact-text">+380 (93) 756 64 25 (Viber, Telegram) <br> hello@ml-motion.com</span>
                  </div>
-
-                 <footer>
+                 <footer class="footer">
                      <a class="footer-link" href="https://www.instagram.com/ml_motion"><i class="fab fa-instagram"></i></a>
                      <a class="footer-link" href="https://www.facebook.com/ml.motion"><i class="fab fa-facebook-f"></i></a>
                      <a class="footer-link" href="https://vimeo.com/user44312551"><i class="fab fa-vimeo-v"></i></a>
                      <div class="footer-mail">hello@ml-motion.com</div>
                  </footer>
              </section>
+
 
                 <!--End Contact Block-->
 
