--- a/photo.html
+++ b/photo.html
@@ -53,6 +53,13 @@
         </div>
         <!--end navbar block-->
     </header>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-6">
+            </div>
+            <div class="col-xs-6"></div>
+        </div>
+    </div>
     <footer class="footer">
         <a class="footer-link" href="https://www.instagram.com/ml_motion"><i class="fab fa-instagram"></i></a>
         <a class="footer-link" href="https://www.facebook.com/ml.motion"><i class="fab fa-facebook-f"></i></a>
