photo gallery add

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,8 @@
     </head>
     <body>
     <section class="visible-xs pages-screen">
+
+        <img src="img/mob/contact-screen.png" alt="" class="background-img">
         <!--Mobile header-->
         <header class="ml-header">
             <!--logo block-->
@@ -58,14 +60,15 @@
                 <h1 class="contact-h1">Or contact directly:</h1>
                 <span class="contact-text">+380 (93) 756 64 25 (Viber, Telegram) <br> hello@ml-motion.com</span>
             </div>
+            <footer class="footer">
+                <a class="footer-link" href="https://www.instagram.com/ml_motion"><i class="fab fa-instagram"></i></a>
+                <a class="footer-link" href="https://www.facebook.com/ml.motion"><i class="fab fa-facebook-f"></i></a>
+                <a class="footer-link" href="https://vimeo.com/user44312551"><i class="fab fa-vimeo-v"></i></a>
+                <div class="footer-mail">hello@ml-motion.com</div>
+            </footer>
             <!--end navbar block-->
         </header>
-        <footer class="footer">
-            <a class="footer-link" href="https://www.instagram.com/ml_motion"><i class="fab fa-instagram"></i></a>
-            <a class="footer-link" href="https://www.facebook.com/ml.motion"><i class="fab fa-facebook-f"></i></a>
-            <a class="footer-link" href="https://vimeo.com/user44312551"><i class="fab fa-vimeo-v"></i></a>
-            <div class="footer-mail">hello@ml-motion.com</div>
-        </footer>
+
         <!--End mobile header-->
     </section>
 
