--- a/photo.html
+++ b/photo.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <section class="visible-xs pages-screen">
+    <img src="img/mob/contact-screen.png" alt="" class="background-img">
     <!--Mobile header-->
     <header class="ml-header">
         <!--logo block-->
@@ -53,13 +54,19 @@
         </div>
         <!--end navbar block-->
     </header>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-6">
-            </div>
-            <div class="col-xs-6"></div>
+    <div class="container">
+        <div class="column">
+            <img class="carousel-img" src="img/mob/photo-screen1.png" alt="">
+            <img class="carousel-img" src="img/mob/photo-screen2.png" alt="">
+            <img class="carousel-img" src="img/mob/photo-screen1.png" alt="">
+            <img class="carousel-img" src="img/mob/photo-screen2.png" alt="">
+        </div>
+        <div class="column">
+            <img class="carousel-img" src="img/mob/photo-screen4.png" alt="">
+            <img class="carousel-img" src="img/mob/photo-screen3.png" alt="">
         </div>
     </div>
+
     <footer class="footer">
         <a class="footer-link" href="https://www.instagram.com/ml_motion"><i class="fab fa-instagram"></i></a>
         <a class="footer-link" href="https://www.facebook.com/ml.motion"><i class="fab fa-facebook-f"></i></a>
