--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="collapse navbar-collapse" id="nav-toggle">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                <a class="nav-link" href="/index.html">MAIN</a>
+                                <a class="nav-link" href="index.html">MAIN</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="video.html">VIDEOS</a>
