--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name=”format-detection” content=”telephone=no”>
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="description" content="ML-motion" />
         <meta name="keywords" content="video, photo, art" />
         <title>ML-motion</title>
